--- a/work2.ipynb
+++ b/work2.ipynb
@@ -20,7 +20,7 @@
     "import mymd\n",
     "#mymd.is_prime(int(input()))\n",
     "#mymd.is_triangle(float(input()), float(input()), float(input()))\n",
-    "mymd.is_palindrome(str(input()))"
+    "#mymd.is_palindrome(str(input()))"
    ]
   }
  ],
